sass/style.scss
@import './root.scss';
@import './mixins.scss';

/* Start main doc */
html,
body {
    font-family: Helvetica,
                 Inter,
                 sans-serif;
    font-size: 1.075rem;
    @media (prefers-reduced-motion) {
        * { animation: none !important; }
    }
    a {
        color: inherit;
        text-underline-offset: .2rem;
        text-decoration-thickness: .125rem;
        &:hover,
        &:focus {
            background: var(--lunar-bg);
            color: black;
            opacity: 1 !important;
        }
        @include transition;
    }
    @media (prefers-color-scheme: dark) {
        background: #191919;
        color: #f3f3f3;
    }
    margin: 0 auto;
}
main {
    margin: 0 auto;
    max-width: 85%;
    @media(min-width: 1200px) {
        max-width: 65%;
    }
}

.adj {
  aside { img { max-width: 100%; } }
  .bio > .links {
    font-weight: 600;
    font-size: 1.2rem;
    line-height: 1.4;
  }
  @media(min-width: 650px) {
    div > :first-child { margin-top: 0; }
    display: flex;
    flex-direction: row;
    aside {
      margin-right: 2rem;
      hr { display: none; }
    }
  }
}

pre,
code {
    background: #383838;
    color: #b1a9d3;
}
pre {
    padding: .5rem 1rem;
    overflow-x: auto;
    border-radius: .5rem;
    line-height: 1.5;
}
code {
    padding: .25rem .5rem;
    border-radius: .5rem;
}

footer {
    padding-top: 1rem;
    margin-bottom: 2rem;
    text-align: center;
    color: rgba(0,0,0,0.8);
    @media(prefers-color-scheme: dark) {color: rgba(243,243,243,0.8);}
}

header {
    margin-bottom: 1rem;
    hr { border-width: 4px; }
    h1 {
        margin-top: 0;
        margin-bottom: 0;
    }
}
main,
.rdbl {
    p { line-height: 1.6; }
    h1 {
        font-size: 2rem;
        margin: 0;
        margin-bottom: 5px;
    }
    h2 {
        font-size: 1.5rem;
        margin: .5rem 0;
    }
    ul > li {
        padding-top: .3rem;
        padding-bottom: .3rem;
        ul > li:last-child { padding-bottom: 0; }
    }
    img { max-width: 100%; }
}

nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    ul {
        display: flex;
        list-style: none;
        text-align: center;
        margin: 0;
        padding: 0;
        :first-child { padding-left: 0; }
        :last-child { padding-right: 0; }
        li {
            display: flex;
            flex-direction: column;
            justify-content: center;
            margin-top: .9rem;
            margin-bottom: .9rem;
            padding: .5rem;
            svg path,
            a { @include transition; }
            &:hover,
            &:focus {
                svg path {
                    //stroke: var(--lunar);
                    stroke: var(--purple-l);
                    @media (prefers-color-scheme: 'dark') {
                        stroke: var(--purple);
                    }
                }
                a {
                    //color: var(--lunar);
                    color: var(--purple-l);
                    @media (prefers-color-scheme: 'dark') {
                        color: var(--purple);
                    }
                    background: none;
                    text-decoration: underline;
                    text-decoration-color: initial;
                }
            }
            @media (prefers-color-scheme: 'dark') {
                svg path { stroke: white; }
            }
            a {
                text-decoration: none;
                font-weight: bold;
                text-decoration-color: rgba(0,0,0,0); // Fix flash of white/black
            }
        }
    }
}

.disclaimer {
    font-weight: bold;
    color: rgba(0,0,0,0.8);
    @media(prefers-color-scheme: dark) {color: rgba(243,243,243,0.8);}
}

// Feed classes
.feed {
    @media (min-width: 600px) {
        display: grid;
        grid-template-columns: repeat(2, minmax(0,1fr));
    }
    @media(min-width: 1000px) {
        grid-template-columns: repeat(3, minmax(0,2fr));
    }
    .post {
        margin-top: 0;
        margin-left: .5rem;
        margin-right: .5rem;
    }
}
.post {
    margin-top: 1rem;
    a {
        color: inherit;
        &:hover,
        &:focus {
            h3,
            p {
              background: var(--lunar-bg);
            }
            color: #000;
        }
        text-decoration: none;
        font-weight: bold;
        transition: none;
    }
}

.footnote-definition { display: inline-flex; }

